# OpenAgentManager

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json  vite.cli.config.ts  vite.config.ts  vite.mcp.config.ts
.agent/: .gitignore  config.json
.agent/threads/00882a1a-a5c1-4261-9d51-b33c1d09539a/: thread.json
.agent/threads/01a3f430-8770-45c3-9f30-61228dfed25c/: thread.json
.agent/threads/0203861d-b09f-43e7-a021-bab363de7cf5/: thread.json
.agent/threads/047a5cc2-51fb-424f-b430-d9cf5957a6e5/: thread.json
.agent/threads/090e05a0-6cbf-47d2-808b-72c86313202a/: thread.json
.claude/: settings.local.json
.github/workflows/: pages.yml  release.yml
docs/: agent-thread-storage-format.md  architecture-review-action-items.md  index.html  install.ps1  install.sh
e2e/: app.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  file.rs  git.rs  mod.rs  registry.rs  session.rs  settings.rs  system.rs  terminal.rs  window.rs  workspace.rs
src-tauri/src/services/: acp_client.rs  agent_manager.rs  download_service.rs  git_service.rs  mod.rs  registry_service.rs  session_manager.rs  settings_service.rs  terminal_service.rs  thread_store.rs  workspace_service.rs
src/cli/: index.ts
src/main/: index.ts  window.ts
src/mcp-server/: index.ts
src/preload/: index.ts
src/renderer/: App.tsx  globals.css  index.html  main.tsx
src/shared/: constants.ts
(+128 files in other folders)
