[package]
name = "open-agent-manager"
version = "1.0.0"
description = "OpenAgentManager - Desktop app for ACP-compatible AI coding agents"
authors = []
license = ""
repository = ""
default-run = "open-agent-manager"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "open_agent_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-agent-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
dirs = "5"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
flate2 = "1"
tar = "0.4"
zip = "2"
portable-pty = "0.8"
which = "7"
once_cell = "1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"  # Strip expensive panic clean-up logic
codegen-units = 1  # Compile crates one at a time so the compiler can optimize better
lto = true  # Enables link to optimizations
opt-level = "s"  # Optimize for binary size
strip = true  # Remove debug symbols
